Comite com localização no MAPA

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,13 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".activity.MapsActivity"
+        android:name=".activity.MapsActivity"
+        android:label="@string/title_activity_maps"></activity>
+
+        <activity
+            android:name=".activity.LocalizacaoMaps"
             android:label="@string/title_activity_maps"></activity>
+
     </application>
 
 </manifest>
